--- a/GCPnetwork/artifacts/chaincode/basic_chaincode/package.json
+++ b/GCPnetwork/artifacts/chaincode/basic_chaincode/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "chaincode_example02",
+	"name": "basic_chaincode",
 	"version": "1.0.0",
-	"description": "chaincode_example02 chaincode implemented in node.js",
+	"description": "Bare minumum code for running the chaincode implemented in node.js",
 	"engines": {
 		"node": ">=8.4.0",
 		"npm": ">=5.3.0"
 	},
-	"scripts": { "start" : "node chaincode_example02.js" },
+	"scripts": { "start" : "node basic_chaincode.js" },
 	"engine-strict": true,
 	"license": "Apache-2.0",
 	"dependencies": {
